--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "devchallenges-weather-app",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
