--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "devchallenges-weather-app",
   "version": "0.1.0",
   "private": false,
-  "homepage":"https://github.com/Boki87/devchallenges-weather-app.git",  
+  "homepage":"https://Boki87.github.io/devchallenges-weather-app",  
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
@@ -18,7 +18,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -b master -d build"
   },
   "eslintConfig": {
     "extends": [
