--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "devchallenges-weather-app",
   "version": "0.1.0",
   "private": false,
-  "homepage":"https://Boki87.github.io/devchallenges-weather-app",  
+  "homepage":".",  
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
